--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,19 +8,14 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    
-    strategy:
-      matrix:
-        node-version: [16.x, 18.x, 20.x]
-        
+    runs-on: ubuntu-latest    
     steps:
     - name: Checkout repository 
       uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version}}
+    - name: Use Node.js 20
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version}}
+        node-version: 20
         cache: 'npm'
     - name: Install dependencies
       run: npm ci
