--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch :   
 
 jobs:
-  build:
+  test-integration:
     runs-on: ubuntu-latest    
     steps:
     - name: Checkout repository 
@@ -21,4 +21,18 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Run integration tests
-      run: npm test
+      run: npm test        
+  test-security:   
+    runs-on: ubuntu-latest
+    steps: 
+    - name: Checkout repository 
+      uses: actions/checkout@v3
+    - name: Use Node.js 20
+      uses: actions/setup-node@v3
+      with:
+        node-version: 20.x
+        cache: 'npm'
+    - name: Install dependencies
+      run: npm ci  
+    - name: Security check
+      run: npm test-npm-security
