--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: npm ci  
     - name: Security check
-      run: npm test-npm-security
+      run: npm run test-npm-security
 
    test-integration:
     needs: test-security
