--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,6 +25,7 @@ jobs:
 
    test-integration:
     needs: test-security
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest    
     steps:
     - name: Checkout repository 
